remove pydantic from configs

--- a/experiments/hydra-configs/optimization-nodes.ipynb
+++ b/experiments/hydra-configs/optimization-nodes.ipynb
@@ -104,6 +104,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from autointent.configs.modules import MODULES_CONFIGS, create_search_space_dataclass\n",
+    "from typing import Any\n",
+    "\n",
+    "\n",
+    "def parse_search_space(node_type: str, search_space: dict[str, Any]):\n",
+    "    module_config = MODULES_CONFIGS[node_type][search_space[\"module_type\"]]\n",
+    "    make_search_space_model = create_search_space_dataclass(module_config)\n",
+    "    return make_search_space_model(**search_space)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -112,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,27 +147,16 @@
     "\n",
     "retrieval_optimizer_config = NodeOptimizerConfig(\n",
     "    node_info=retrieval_node_info,\n",
-    "    search_space=config[\"nodes\"][0][\"modules\"],\n",
+    "    search_space=[parse_search_space(\"retrieval\", ss) for ss in config[\"nodes\"][0][\"modules\"]],\n",
     "    metric=config[\"nodes\"][0][\"metric\"],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/voorhs/.cache/pypoetry/virtualenvs/autointent-D7M6VOhJ-py3.12/lib/python3.12/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_name\" in VectorDBConfigSearchSpace has conflict with protected namespace \"model_\".\n",
-      "\n",
-      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from autointent.nodes.optimization import NodeOptimizer\n",
     "\n",
@@ -160,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,40 +201,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "scoring_optimizer_config = NodeOptimizerConfig(\n",
     "    node_info=scoring_node_info,\n",
-    "    search_space=config[\"nodes\"][1][\"modules\"],\n",
+    "    search_space=[parse_search_space(\"scoring\", ss) for ss in config[\"nodes\"][1][\"modules\"]],\n",
     "    metric=config[\"nodes\"][1][\"metric\"],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/voorhs/.cache/pypoetry/virtualenvs/autointent-D7M6VOhJ-py3.12/lib/python3.12/site-packages/pydantic/_internal/_fields.py:132: UserWarning: Field \"model_name\" in DNNCScorerConfigSearchSpace has conflict with protected namespace \"model_\".\n",
-      "\n",
-      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "scoring_optimizer: NodeOptimizer = instantiate(scoring_optimizer_config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,36 +301,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'module_type': 'threshold', 'thresh': [0.5, [0.5, 0.5, 0.5]]},\n",
-       " {'module_type': 'tunable'},\n",
-       " {'module_type': 'argmax'},\n",
-       " {'module_type': 'jinoos'}]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "search_space = config[\"nodes\"][2][\"modules\"]\n",
-    "search_space"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# search_space.pop(0)\n",
-    "# search_space"
+    "prediction_optimizer_config = NodeOptimizerConfig(\n",
+    "    node_info=prediction_node_info,\n",
+    "    search_space=[parse_search_space(\"prediction\", ss) for ss in config[\"nodes\"][2][\"modules\"]],\n",
+    "    metric=config[\"nodes\"][2][\"metric\"],\n",
+    ")"
    ]
   },
   {
@@ -345,32 +318,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_optimizer_config = NodeOptimizerConfig(\n",
-    "    node_info=prediction_node_info,\n",
-    "    search_space=search_space,\n",
-    "    metric=config[\"nodes\"][2][\"metric\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "prediction_optimizer: NodeOptimizer = instantiate(prediction_optimizer_config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-10-08 18:14:30,410] A new study created in memory with name: no-name-9eff92db-b1ae-4bdb-912e-b4ec33eb76c5\n",
       "Your data contains out-of-scope utterances, but ArgmaxPredictor cannot detect them. Consider different predictor\n"
      ]
     }
