refactor `nodes_info`

--- a/experiments/hydra-configs/optimization-nodes.ipynb
+++ b/experiments/hydra-configs/optimization-nodes.ipynb
@@ -14,7 +14,6 @@
    "outputs": [],
    "source": [
     "from hydra.utils import instantiate\n",
-    "from dataclasses import asdict\n",
     "import logging\n",
     "\n",
     "logger = logging.getLogger(__name__)"
@@ -48,22 +47,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from autointent.pipeline.pipeline import load_config\n",
+    "from autointent.pipeline.optimization import load_config\n",
     "\n",
     "config = load_config(\n",
     "    config_path=\"/home/voorhs/repos/AutoIntent/tests/minimal-optimization/configs/multiclass.yaml\",\n",
-    "    mode=\"multiclass\",\n",
+    "    multilabel=False,\n",
     "    logger=logger,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,33 +127,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from autointent.nodes import RetrievalNodeInfo\n",
-    "\n",
-    "retrieval_node_info = RetrievalNodeInfo()"
+    "node_type = \"retrieval\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from autointent.configs.node import NodeOptimizerConfig\n",
     "\n",
     "retrieval_optimizer_config = NodeOptimizerConfig(\n",
-    "    node_info=retrieval_node_info,\n",
-    "    search_space=[parse_search_space(\"retrieval\", ss) for ss in config[\"nodes\"][0][\"modules\"]],\n",
+    "    node_type=node_type,\n",
+    "    search_space=[parse_search_space(node_type, ss) for ss in config[\"nodes\"][0][\"modules\"]],\n",
     "    metric=config[\"nodes\"][0][\"metric\"],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -190,31 +187,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from autointent.nodes import ScoringNodeInfo\n",
-    "\n",
-    "scoring_node_info = ScoringNodeInfo()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "node_type = \"scoring\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "scoring_optimizer_config = NodeOptimizerConfig(\n",
-    "    node_info=scoring_node_info,\n",
-    "    search_space=[parse_search_space(\"scoring\", ss) for ss in config[\"nodes\"][1][\"modules\"]],\n",
+    "    node_type=node_type,\n",
+    "    search_space=[parse_search_space(node_type, ss) for ss in config[\"nodes\"][1][\"modules\"]],\n",
     "    metric=config[\"nodes\"][1][\"metric\"],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -290,31 +285,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from autointent.nodes import PredictionNodeInfo\n",
-    "\n",
-    "prediction_node_info = PredictionNodeInfo()"
+    "node_type = \"prediction\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "prediction_optimizer_config = NodeOptimizerConfig(\n",
-    "    node_info=prediction_node_info,\n",
-    "    search_space=[parse_search_space(\"prediction\", ss) for ss in config[\"nodes\"][2][\"modules\"]],\n",
+    "    node_type=node_type,\n",
+    "    search_space=[parse_search_space(node_type, ss) for ss in config[\"nodes\"][2][\"modules\"]],\n",
     "    metric=config[\"nodes\"][2][\"metric\"],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
