--- a/experiments/hydra-configs/pipeline.ipynb
+++ b/experiments/hydra-configs/pipeline.ipynb
@@ -1,6 +1,111 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Toy example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from omegaconf import MISSING\n",
+    "\n",
+    "class Optimizer:\n",
+    "    def __init__(self, algo: str, lr: float) -> None:\n",
+    "        self.algo = algo\n",
+    "        self.lr = lr\n",
+    "\n",
+    "@dataclass\n",
+    "class OptimizerConfig:\n",
+    "    algo: str = \"SGD\"\n",
+    "    lr: float = MISSING\n",
+    "    _target_: str = f\"{__name__}.Optimizer\"\n",
+    "\n",
+    "class Dataset:\n",
+    "    def __init__(self, name: str, path: str) -> None:\n",
+    "        self.name = name\n",
+    "        self.path = path\n",
+    "\n",
+    "@dataclass\n",
+    "class DatasetConfig:\n",
+    "    name: str = \"clinc\"\n",
+    "    path: str = \"./clinc.json\"\n",
+    "    _target_: str = f\"{__name__}.Dataset\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Trainer:\n",
+    "    def __init__(self, optimizer: Optimizer, datasets: list[Dataset]) -> None:\n",
+    "        self.optimizer = optimizer\n",
+    "        self.datasets = datasets\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class TrainerConfig:\n",
+    "    optimizer: OptimizerConfig = MISSING\n",
+    "    datasets: list[DatasetConfig] = MISSING\n",
+    "    _target_: str = f\"{__name__}.Trainer\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dct = {\n",
+    "    # \"_target_\": f\"{__name__}.Trainer\",\n",
+    "    \"optimizer\": {\n",
+    "        # \"_target_\": f\"{__name__}.Optimizer\",\n",
+    "        \"algo\": \"SGD\",\n",
+    "        \"lr\": 1e-3,\n",
+    "    },\n",
+    "    \"datasets\": [{\n",
+    "        # \"_target_\": f\"{__name__}.Dataset\",\n",
+    "        \"name\": \"clinc\",\n",
+    "        \"path\": \"./clinc.json\",\n",
+    "    }],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Trainer at 0x79f32bf76450>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from hydra.utils import instantiate\n",
+    "\n",
+    "trainer: Trainer = instantiate(TrainerConfig(), **dct)\n",
+    "# trainer: Trainer = instantiate(dct)\n",
+    "trainer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -19,7 +124,7 @@
     "    multilabel_utterance_records=[],\n",
     "    test_utterance_records=[],\n",
     "    device=\"cpu\",\n",
-    "    mode=\"multiclass\",\n",
+    "    mode=\"multiclass_as_multilabel\",\n",
     "    multilabel_generation_config=\"\",\n",
     "    db_dir=db_dir,\n",
     "    regex_sampling=0,\n",
@@ -33,9 +138,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from autointent.pipeline.optimization import load_config\n",
+    "import importlib.resources as ires\n",
+    "from pathlib import Path\n",
+    "from logging import Logger\n",
+    "import yaml\n",
     "\n",
-    "config = load_config(\"/home/voorhs/repos/AutoIntent/autointent/datafiles/default-multiclass-config.yaml\", multilabel=False)"
+    "\n",
+    "def load_config(config_path: str, multilabel: bool, logger: Logger | None = None):\n",
+    "    \"\"\"load config from the given path or load default config which is distributed along with the autointent package\"\"\"\n",
+    "    if config_path != \"\":\n",
+    "        if logger is not None:\n",
+    "            logger.debug(\"loading optimization search space config from %s...)\", config_path)\n",
+    "        with Path(config_path).open() as file:\n",
+    "            file_content = file.read()\n",
+    "    else:\n",
+    "        if logger is not None:\n",
+    "            logger.debug(\"loading default optimization search space config...\")\n",
+    "        config_name = \"default-multilabel-config.yaml\" if multilabel else \"default-multiclass-config.yaml\"\n",
+    "        with ires.files(\"autointent.datafiles\").joinpath(config_name).open() as file:\n",
+    "            file_content = file.read()\n",
+    "    return yaml.safe_load(file_content)"
    ]
   },
   {
@@ -44,9 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from autointent.pipeline.pipeline import Pipeline\n",
-    "\n",
-    "pipeline: Pipeline = instantiate(config)"
+    "config = load_config(\"/home/voorhs/repos/AutoIntent/autointent/datafiles/default-multilabel-config.yaml\", multilabel=True)"
    ]
   },
   {
@@ -55,77 +175,76 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nodes': [{'metric': 'retrieval_hit_rate_intersecting',\n",
+      "            'node_type': 'retrieval',\n",
+      "            'search_space': [{'k': [10],\n",
+      "                              'model_name': ['deepvk/USER-bge-m3'],\n",
+      "                              'module_type': 'vector_db'}]},\n",
+      "           {'metric': 'scoring_roc_auc',\n",
+      "            'node_type': 'scoring',\n",
+      "            'search_space': [{'k': [3],\n",
+      "                              'module_type': 'knn',\n",
+      "                              'weights': ['uniform', 'distance', 'closest']},\n",
+      "                             {'module_type': 'linear'}]},\n",
+      "           {'metric': 'prediction_accuracy',\n",
+      "            'node_type': 'prediction',\n",
+      "            'search_space': [{'module_type': 'threshold', 'thresh': [0.5]}]}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "pprint(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from autointent.pipeline.pipeline import Pipeline\n",
+    "from autointent.configs.pipeline import PipelineOptimizationConfig\n",
+    "\n",
+    "\n",
+    "pipeline: Pipeline = instantiate(PipelineOptimizationConfig(), **config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "[<autointent.nodes.optimization.node_optimizer.NodeOptimizer object at 0x76219510c7a0>, <autointent.nodes.optimization.node_optimizer.NodeOptimizer object at 0x76219510e0f0>, <autointent.nodes.optimization.node_optimizer.NodeOptimizer object at 0x76219510cad0>]"
+       "autointent.pipeline.pipeline.Pipeline"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipeline.nodes"
+    "type(pipeline)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No sentence-transformers model found with name infgrad/stella-base-en-v2. Creating a new one with mean pooling.\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "Your data contains out-of-scope utterances, but ArgmaxPredictor cannot detect them. Consider different predictor\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pipeline.optimize(context)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
