add `from_dict_config` method

--- a/experiments/hydra-configs/modules.ipynb
+++ b/experiments/hydra-configs/modules.ipynb
@@ -24,7 +24,10 @@
    "outputs": [],
    "source": [
     "from autointent import Context\n",
-    "from autointent.pipeline.optimization import get_db_dir, get_run_name, load_data\n",
+    "from autointent.pipeline.optimization.utils import get_run_name, load_data\n",
+    "from autointent.pipeline.utils import get_db_dir\n",
+    "from autointent.custom_types import ClassificationMode\n",
+    "\n",
     "\n",
     "run_name = get_run_name(\"multiclass-cpu\")\n",
     "db_dir = get_db_dir(\"\", run_name)\n",
@@ -35,7 +38,7 @@
     "    multilabel_utterance_records=[],\n",
     "    test_utterance_records=[],\n",
     "    device=\"cpu\",\n",
-    "    mode=\"multiclass\",\n",
+    "    mode=ClassificationMode.multiclass,\n",
     "    multilabel_generation_config=\"\",\n",
     "    db_dir=db_dir,\n",
     "    regex_sampling=0,\n",
@@ -252,7 +255,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-10-07 11:29:23,904] A new study created in memory with name: no-name-6ae90f0e-5f5a-4484-a6d2-bec67e7f1cad\n"
+      "[I 2024-10-09 13:54:06,800] A new study created in memory with name: no-name-bdcda0ad-ecd1-4f82-99e0-8f9b33303409\n"
      ]
     }
    ],
