--- a/experiments/hydra-configs/pipeline.ipynb
+++ b/experiments/hydra-configs/pipeline.ipynb
@@ -4,104 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Toy example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dataclasses import dataclass\n",
-    "from omegaconf import MISSING\n",
-    "\n",
-    "class Optimizer:\n",
-    "    def __init__(self, algo: str, lr: float) -> None:\n",
-    "        self.algo = algo\n",
-    "        self.lr = lr\n",
-    "\n",
-    "@dataclass\n",
-    "class OptimizerConfig:\n",
-    "    algo: str = \"SGD\"\n",
-    "    lr: float = MISSING\n",
-    "    _target_: str = f\"{__name__}.Optimizer\"\n",
-    "\n",
-    "class Dataset:\n",
-    "    def __init__(self, name: str, path: str) -> None:\n",
-    "        self.name = name\n",
-    "        self.path = path\n",
-    "\n",
-    "@dataclass\n",
-    "class DatasetConfig:\n",
-    "    name: str = \"clinc\"\n",
-    "    path: str = \"./clinc.json\"\n",
-    "    _target_: str = f\"{__name__}.Dataset\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "class Trainer:\n",
-    "    def __init__(self, optimizer: Optimizer, datasets: list[Dataset]) -> None:\n",
-    "        self.optimizer = optimizer\n",
-    "        self.datasets = datasets\n",
-    "\n",
-    "\n",
-    "@dataclass\n",
-    "class TrainerConfig:\n",
-    "    optimizer: OptimizerConfig = MISSING\n",
-    "    datasets: list[DatasetConfig] = MISSING\n",
-    "    _target_: str = f\"{__name__}.Trainer\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dct = {\n",
-    "    # \"_target_\": f\"{__name__}.Trainer\",\n",
-    "    \"optimizer\": {\n",
-    "        # \"_target_\": f\"{__name__}.Optimizer\",\n",
-    "        \"algo\": \"SGD\",\n",
-    "        \"lr\": 1e-3,\n",
-    "    },\n",
-    "    \"datasets\": [{\n",
-    "        # \"_target_\": f\"{__name__}.Dataset\",\n",
-    "        \"name\": \"clinc\",\n",
-    "        \"path\": \"./clinc.json\",\n",
-    "    }],\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Trainer at 0x79f32bf76450>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from hydra.utils import instantiate\n",
-    "\n",
-    "trainer: Trainer = instantiate(TrainerConfig(), **dct)\n",
-    "# trainer: Trainer = instantiate(dct)\n",
-    "trainer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Pipeline"
    ]
   },
@@ -111,9 +13,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hydra.utils import instantiate\n",
     "from autointent import Context\n",
-    "from autointent.pipeline.optimization import get_db_dir, get_run_name, load_data\n",
+    "from autointent.pipeline.optimization.utils import get_run_name, load_data\n",
+    "from autointent.pipeline.utils import get_db_dir\n",
+    "from autointent.custom_types import ClassificationMode\n",
+    "\n",
     "\n",
     "run_name = get_run_name(\"multiclass-cpu\")\n",
     "db_dir = get_db_dir(\"\", run_name)\n",
@@ -124,7 +28,7 @@
     "    multilabel_utterance_records=[],\n",
     "    test_utterance_records=[],\n",
     "    device=\"cpu\",\n",
-    "    mode=\"multiclass_as_multilabel\",\n",
+    "    mode=ClassificationMode.multiclass_as_multilabel,\n",
     "    multilabel_generation_config=\"\",\n",
     "    db_dir=db_dir,\n",
     "    regex_sampling=0,\n",
@@ -138,40 +42,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import importlib.resources as ires\n",
-    "from pathlib import Path\n",
-    "from logging import Logger\n",
-    "import yaml\n",
+    "from autointent.pipeline.optimization.utils import load_config\n",
     "\n",
-    "\n",
-    "def load_config(config_path: str, multilabel: bool, logger: Logger | None = None):\n",
-    "    \"\"\"load config from the given path or load default config which is distributed along with the autointent package\"\"\"\n",
-    "    if config_path != \"\":\n",
-    "        if logger is not None:\n",
-    "            logger.debug(\"loading optimization search space config from %s...)\", config_path)\n",
-    "        with Path(config_path).open() as file:\n",
-    "            file_content = file.read()\n",
-    "    else:\n",
-    "        if logger is not None:\n",
-    "            logger.debug(\"loading default optimization search space config...\")\n",
-    "        config_name = \"default-multilabel-config.yaml\" if multilabel else \"default-multiclass-config.yaml\"\n",
-    "        with ires.files(\"autointent.datafiles\").joinpath(config_name).open() as file:\n",
-    "            file_content = file.read()\n",
-    "    return yaml.safe_load(file_content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "config = load_config(\"/home/voorhs/repos/AutoIntent/autointent/datafiles/default-multilabel-config.yaml\", multilabel=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -202,20 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from autointent.pipeline.pipeline import Pipeline\n",
-    "from autointent.configs.pipeline import PipelineOptimizationConfig\n",
     "\n",
-    "\n",
-    "pipeline: Pipeline = instantiate(PipelineOptimizationConfig(), **config)"
+    "pipeline = Pipeline.from_dict_config(config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +100,7 @@
        "autointent.pipeline.pipeline.Pipeline"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,12 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "pipeline.dump(\"\", run_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
