--- a/experiments/hydra-configs/optimization-nodes.ipynb
+++ b/experiments/hydra-configs/optimization-nodes.ipynb
@@ -13,7 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hydra.utils import instantiate\n",
     "import logging\n",
     "\n",
     "logger = logging.getLogger(__name__)"
@@ -26,7 +25,10 @@
    "outputs": [],
    "source": [
     "from autointent import Context\n",
-    "from autointent.pipeline.optimization import get_db_dir, get_run_name, load_data\n",
+    "from autointent.pipeline.optimization.utils import get_run_name, load_data\n",
+    "from autointent.pipeline.utils import get_db_dir\n",
+    "from autointent.custom_types import ClassificationMode\n",
+    "\n",
     "\n",
     "run_name = get_run_name(\"multiclass-cpu\")\n",
     "db_dir = get_db_dir(\"\", run_name)\n",
@@ -37,7 +39,7 @@
     "    multilabel_utterance_records=[],\n",
     "    test_utterance_records=[],\n",
     "    device=\"cpu\",\n",
-    "    mode=\"multiclass\",\n",
+    "    mode=ClassificationMode.multiclass_as_multilabel,\n",
     "    multilabel_generation_config=\"\",\n",
     "    db_dir=db_dir,\n",
     "    regex_sampling=0,\n",
@@ -47,52 +49,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from autointent.pipeline.optimization import load_config\n",
+    "from autointent.pipeline.optimization.utils import load_config\n",
     "\n",
-    "config = load_config(\n",
-    "    config_path=\"/home/voorhs/repos/AutoIntent/tests/minimal-optimization/configs/multiclass.yaml\",\n",
-    "    multilabel=False,\n",
-    "    logger=logger,\n",
-    ")"
+    "config = load_config(\"/home/voorhs/repos/AutoIntent/autointent/datafiles/default-multilabel-config.yaml\", multilabel=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'nodes': [{'metric': 'retrieval_hit_rate',\n",
-      "            'modules': [{'k': [10],\n",
-      "                         'model_name': ['sentence-transformers/all-MiniLM-L6-v2',\n",
-      "                                        'avsolatorio/GIST-small-Embedding-v0'],\n",
-      "                         'module_type': 'vector_db'}],\n",
-      "            'node_type': 'retrieval'},\n",
+      "{'nodes': [{'metric': 'retrieval_hit_rate_intersecting',\n",
+      "            'node_type': 'retrieval',\n",
+      "            'search_space': [{'k': [10],\n",
+      "                              'model_name': ['deepvk/USER-bge-m3'],\n",
+      "                              'module_type': 'vector_db'}]},\n",
       "           {'metric': 'scoring_roc_auc',\n",
-      "            'modules': [{'k': [5, 10],\n",
-      "                         'module_type': 'knn',\n",
-      "                         'weights': ['uniform', 'distance', 'closest']},\n",
-      "                        {'module_type': 'linear'},\n",
-      "                        {'k': [1, 3],\n",
-      "                         'model_name': ['cross-encoder/ms-marco-MiniLM-L-6-v2',\n",
-      "                                        'avsolatorio/GIST-small-Embedding-v0'],\n",
-      "                         'module_type': 'dnnc',\n",
-      "                         'train_head': [False, True]}],\n",
-      "            'node_type': 'scoring'},\n",
+      "            'node_type': 'scoring',\n",
+      "            'search_space': [{'k': [3],\n",
+      "                              'module_type': 'knn',\n",
+      "                              'weights': ['uniform', 'distance', 'closest']},\n",
+      "                             {'module_type': 'linear'}]},\n",
       "           {'metric': 'prediction_accuracy',\n",
-      "            'modules': [{'module_type': 'threshold',\n",
-      "                         'thresh': [0.5, [0.5, 0.5, 0.5]]},\n",
-      "                        {'module_type': 'tunable'},\n",
-      "                        {'module_type': 'argmax'},\n",
-      "                        {'module_type': 'jinoos'}],\n",
-      "            'node_type': 'prediction'}]}\n"
+      "            'node_type': 'prediction',\n",
+      "            'search_space': [{'module_type': 'threshold', 'thresh': [0.5]}]}]}\n"
      ]
     }
    ],
@@ -100,22 +88,6 @@
     "from pprint import pprint\n",
     "\n",
     "pprint(config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from autointent.configs.modules import MODULES_CONFIGS, create_search_space_dataclass\n",
-    "from typing import Any\n",
-    "\n",
-    "\n",
-    "def parse_search_space(node_type: str, search_space: dict[str, Any]):\n",
-    "    module_config = MODULES_CONFIGS[node_type][search_space[\"module_type\"]]\n",
-    "    make_search_space_model = create_search_space_dataclass(module_config)\n",
-    "    return make_search_space_model(**search_space)"
    ]
   },
   {
@@ -127,53 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "node_type = \"retrieval\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from autointent.configs.node import NodeOptimizerConfig\n",
-    "\n",
-    "retrieval_optimizer_config = NodeOptimizerConfig(\n",
-    "    node_type=node_type,\n",
-    "    search_space=[parse_search_space(node_type, ss) for ss in config[\"nodes\"][0][\"modules\"]],\n",
-    "    metric=config[\"nodes\"][0][\"metric\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from autointent.nodes.optimization import NodeOptimizer\n",
     "\n",
-    "retrieval_optimizer: NodeOptimizer = instantiate(retrieval_optimizer_config)"
+    "retrieval_optimizer = NodeOptimizer.from_dict_config(config[\"nodes\"][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/voorhs/.cache/pypoetry/virtualenvs/autointent-D7M6VOhJ-py3.12/lib/python3.12/site-packages/transformers/tokenization_utils_base.py:1617: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be deprecated in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "retrieval_optimizer.fit(context)"
    ]
@@ -187,93 +126,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_type = \"scoring\""
+    "scoring_optimizer = NodeOptimizer.from_dict_config(config[\"nodes\"][1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scoring_optimizer_config = NodeOptimizerConfig(\n",
-    "    node_type=node_type,\n",
-    "    search_space=[parse_search_space(node_type, ss) for ss in config[\"nodes\"][1][\"modules\"]],\n",
-    "    metric=config[\"nodes\"][1][\"metric\"],\n",
-    ")"
+    "scoring_optimizer.fit(context)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scoring_optimizer: NodeOptimizer = instantiate(scoring_optimizer_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at avsolatorio/GIST-small-Embedding-v0 and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at avsolatorio/GIST-small-Embedding-v0 and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at avsolatorio/GIST-small-Embedding-v0 and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at avsolatorio/GIST-small-Embedding-v0 and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<autointent.nodes.optimization.node_optimizer.NodeOptimizer at 0x77c0d7fe8c20>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "scoring_optimizer.fit(context)"
+    "scoring_optimizer"
    ]
   },
   {
@@ -285,51 +171,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_type = \"prediction\""
+    "prediction_optimizer = NodeOptimizer.from_dict_config(config[\"nodes\"][2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "prediction_optimizer_config = NodeOptimizerConfig(\n",
-    "    node_type=node_type,\n",
-    "    search_space=[parse_search_space(node_type, ss) for ss in config[\"nodes\"][2][\"modules\"]],\n",
-    "    metric=config[\"nodes\"][2][\"metric\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction_optimizer: NodeOptimizer = instantiate(prediction_optimizer_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Your data contains out-of-scope utterances, but ArgmaxPredictor cannot detect them. Consider different predictor\n"
-     ]
-    }
-   ],
    "source": [
     "prediction_optimizer.fit(context)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## check result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'metrics': {'regexp': [],\n",
+       "  'retrieval': [1.0],\n",
+       "  'scoring': [1.0, 1.0, 1.0, 1.0],\n",
+       "  'prediction': [0.8333333333333334]},\n",
+       " 'configs': {'regexp': [],\n",
+       "  'retrieval': [{'module_type': 'vector_db',\n",
+       "    'module_params': {'k': 10, 'model_name': 'deepvk/USER-bge-m3'},\n",
+       "    'metric_name': 'retrieval_hit_rate_intersecting',\n",
+       "    'metric_value': 1.0}],\n",
+       "  'scoring': [{'module_type': 'knn',\n",
+       "    'module_params': {'k': 3, 'weights': 'uniform'},\n",
+       "    'metric_name': 'scoring_roc_auc',\n",
+       "    'metric_value': 1.0},\n",
+       "   {'module_type': 'knn',\n",
+       "    'module_params': {'k': 3, 'weights': 'distance'},\n",
+       "    'metric_name': 'scoring_roc_auc',\n",
+       "    'metric_value': 1.0},\n",
+       "   {'module_type': 'knn',\n",
+       "    'module_params': {'k': 3, 'weights': 'closest'},\n",
+       "    'metric_name': 'scoring_roc_auc',\n",
+       "    'metric_value': 1.0},\n",
+       "   {'module_type': 'linear',\n",
+       "    'module_params': {},\n",
+       "    'metric_name': 'scoring_roc_auc',\n",
+       "    'metric_value': 1.0}],\n",
+       "  'prediction': [{'module_type': 'threshold',\n",
+       "    'module_params': {'thresh': 0.5},\n",
+       "    'metric_name': 'prediction_accuracy',\n",
+       "    'metric_value': 0.8333333333333334}]}}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context.optimization_info.dump_evaluation_results()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
