refactor pipeline to `OptimizationPipeline` and `InferencePipeline`, add `InferencePipelineConfig`

--- a/experiments/hydra-configs/node-optimizer.ipynb
+++ b/experiments/hydra-configs/node-optimizer.ipynb
@@ -25,21 +25,19 @@
    "outputs": [],
    "source": [
     "from autointent import Context\n",
-    "from autointent.pipeline.optimization.utils import get_run_name, load_data\n",
-    "from autointent.pipeline.utils import get_db_dir\n",
-    "from autointent.custom_types import ClassificationMode\n",
+    "from autointent.pipeline.optimization.utils import get_run_name, load_data, get_db_dir\n",
     "\n",
     "\n",
     "run_name = get_run_name(\"multiclass-cpu\")\n",
     "db_dir = get_db_dir(\"\", run_name)\n",
     "\n",
-    "data = load_data(\"/home/voorhs/repos/AutoIntent/tests/minimal-optimization/data/clinc_subset.json\", multilabel=False)\n",
+    "data = load_data(\"/home/voorhs/repos/AutoIntent/tests/minimal_optimization/data/clinc_subset.json\", multilabel=False)\n",
     "context = Context(\n",
     "    multiclass_intent_records=data,\n",
     "    multilabel_utterance_records=[],\n",
     "    test_utterance_records=[],\n",
     "    device=\"cpu\",\n",
-    "    mode=ClassificationMode.multiclass_as_multilabel,\n",
+    "    mode=\"multiclass_as_multilabel\",\n",
     "    multilabel_generation_config=\"\",\n",
     "    db_dir=db_dir,\n",
     "    regex_sampling=0,\n",
@@ -150,7 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "<autointent.nodes.optimization.node_optimizer.NodeOptimizer at 0x77c0d7fe8c20>"
+       "<autointent.nodes.optimization.node_optimizer.NodeOptimizer at 0x7377e83c4bc0>"
       ]
      },
      "execution_count": 9,
