--- a/experiments/hydra-configs/opt-inf-nodes.ipynb
+++ b/experiments/hydra-configs/opt-inf-nodes.ipynb
@@ -92,32 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "retrieval_optimizer.fit(context)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'modules_dumps/retrieval/vector_db/comb_0'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "retrieval_dump = context.optimization_info.trials.retrieval[0].module_dump_dir\n",
-    "retrieval_dump"
    ]
   },
   {
@@ -129,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,6 +123,10 @@
     "        },\n",
     "        {\n",
     "            'module_type': 'linear'\n",
+    "        },\n",
+    "        {\n",
+    "            \"module_type\": \"mlknn\",\n",
+    "            \"k\": [5]\n",
     "        }\n",
     "    ]\n",
     "}"
@@ -151,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,32 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "scoring_optimizer.fit(context)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'modules_dumps/scoring/linear/comb_0'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scoring_dump = context.optimization_info.trials.scoring[-1].module_dump_dir\n",
-    "scoring_dump"
    ]
   },
   {
@@ -295,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,103 +273,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "retrieval_config = dict(\n",
-    "    node_type=\"retrieval\",\n",
-    "    module_type=\"vector_db\",\n",
-    "    module_config={\"k\": 10, \"model_name\": 'deepvk/USER-bge-m3'},\n",
-    "    load_path=retrieval_dump\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "retrieval = InferenceNode(**retrieval_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<autointent.nodes.nodes_info.retrieval.RetrievalNodeInfo at 0x7527d0e43b90>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==== vector_db ====\n",
+      "\n",
+      "[[0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 1, 0], [0, 1, 0], [1, 0, 0], [0, 1, 0], [0, 1, 0], [1, 0, 0]] [np.float32(0.477605), np.float32(0.49597514), np.float32(0.50022346), np.float32(0.5128485), np.float32(0.55573064), np.float32(0.5758226), np.float32(0.58933824), np.float32(0.6130637), np.float32(0.6174678), np.float32(0.63502705)] ['please set an alarm for mid day', 'make sure my alarm is set for three thirty in the morning', 'have an alarm set for three in the morning', 'wake me up at noon tomorrow', 'i think my account is blocked but i do not know the reason', 'can you tell me why is my bank account frozen', 'can i make a reservation for redrobin', 'why is there a hold on my capital one checking account', 'why is there a hold on my american saving bank account', 'are reservations taken at redrobin']\n"
+     ]
     }
    ],
    "source": [
-    "retrieval.node_info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels, distances, texts = retrieval.module.predict([\"hello\", \"world\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([[0, 0, 1],\n",
-       "  [0, 0, 1],\n",
-       "  [0, 0, 1],\n",
-       "  [0, 0, 1],\n",
-       "  [0, 1, 0],\n",
-       "  [0, 1, 0],\n",
-       "  [1, 0, 0],\n",
-       "  [0, 1, 0],\n",
-       "  [0, 1, 0],\n",
-       "  [1, 0, 0]],\n",
-       " [np.float32(0.477605),\n",
-       "  np.float32(0.49597514),\n",
-       "  np.float32(0.50022346),\n",
-       "  np.float32(0.5128485),\n",
-       "  np.float32(0.55573064),\n",
-       "  np.float32(0.5758226),\n",
-       "  np.float32(0.58933824),\n",
-       "  np.float32(0.6130637),\n",
-       "  np.float32(0.6174678),\n",
-       "  np.float32(0.63502705)],\n",
-       " ['please set an alarm for mid day',\n",
-       "  'make sure my alarm is set for three thirty in the morning',\n",
-       "  'have an alarm set for three in the morning',\n",
-       "  'wake me up at noon tomorrow',\n",
-       "  'i think my account is blocked but i do not know the reason',\n",
-       "  'can you tell me why is my bank account frozen',\n",
-       "  'can i make a reservation for redrobin',\n",
-       "  'why is there a hold on my capital one checking account',\n",
-       "  'why is there a hold on my american saving bank account',\n",
-       "  'are reservations taken at redrobin'])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "labels[0], distances[0], texts[0]"
+    "import gc\n",
+    "import torch\n",
+    "\n",
+    "\n",
+    "for trial in context.optimization_info.trials.retrieval:\n",
+    "    print(f\"\\n==== {trial.module_type} ====\\n\")\n",
+    "    config = dict(\n",
+    "        node_type=\"retrieval\",\n",
+    "        module_type=trial.module_type,\n",
+    "        module_config=trial.module_params,\n",
+    "        load_path=trial.module_dump_dir,\n",
+    "    )\n",
+    "    node = InferenceNode(**config)\n",
+    "    labels, distances, texts = node.module.predict([\"hello\", \"world\"])\n",
+    "    print(labels[0], distances[0], texts[0])\n",
+    "    node.module.clear_cache()\n",
+    "    gc.collect()\n",
+    "    torch.cuda.empty_cache()"
    ]
   },
   {
@@ -419,46 +317,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scoring_config = dict(\n",
-    "    node_type=\"scoring\",\n",
-    "    module_type=\"linear\",\n",
-    "    module_config={},\n",
-    "    load_path=scoring_dump\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scoring = InferenceNode(**scoring_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.27486506, 0.31681463, 0.37459106],\n",
-       "       [0.2769358 , 0.31536099, 0.37366978]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==== knn ====\n",
+      "\n",
+      "[[0. 0. 1.]\n",
+      " [0. 0. 1.]]\n",
+      "\n",
+      "==== knn ====\n",
+      "\n",
+      "[[0.         0.         1.        ]\n",
+      " [0.         0.         0.99999998]]\n",
+      "\n",
+      "==== knn ====\n",
+      "\n",
+      "[[0.         0.         0.7611975 ]\n",
+      " [0.         0.         0.73897344]]\n",
+      "\n",
+      "==== linear ====\n",
+      "\n",
+      "[[0.27486506 0.31681463 0.37459106]\n",
+      " [0.2769358  0.31536099 0.37366978]]\n",
+      "\n",
+      "==== mlknn ====\n",
+      "\n",
+      "[[0.08860759 0.1147541  0.79545455]\n",
+      " [0.08860759 0.1147541  0.79545455]]\n"
+     ]
     }
    ],
    "source": [
-    "scoring.module.predict([\"hello\", \"world\"])"
+    "for trial in context.optimization_info.trials.scoring:\n",
+    "    print(f\"\\n==== {trial.module_type} ====\\n\")\n",
+    "    config = dict(\n",
+    "        node_type=\"scoring\",\n",
+    "        module_type=trial.module_type,\n",
+    "        module_config=trial.module_params,\n",
+    "        load_path=trial.module_dump_dir,\n",
+    "    )\n",
+    "    node = InferenceNode(**config)\n",
+    "    scores = node.module.predict([\"hello\", \"world\"])\n",
+    "    print(scores)\n",
+    "    node.module.clear_cache()\n",
+    "    gc.collect()\n",
+    "    torch.cuda.empty_cache()"
    ]
   },
   {
