add prediction modules dumping

--- a/experiments/hydra-configs/opt-inf-nodes.ipynb
+++ b/experiments/hydra-configs/opt-inf-nodes.ipynb
@@ -46,12 +46,12 @@
     "    multilabel_utterance_records=[],\n",
     "    test_utterance_records=[],\n",
     "    device=\"cpu\",\n",
-    "    mode=\"multiclass\",\n",
+    "    mode=\"multiclass_as_multilabel\",\n",
     "    multilabel_generation_config=\"\",\n",
     "    db_dir=db_dir,\n",
     "    regex_sampling=0,\n",
     "    seed=0,\n",
-    "    dump_dir=\"modules_dumps\"\n",
+    "    dump_dir=\"modules_dumps_multilabel\"\n",
     ")"
    ]
   },
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "retrieval_optimizer_config = {\n",
-    "    'metric': 'retrieval_hit_rate',\n",
+    "    'metric': 'retrieval_hit_rate_intersecting',\n",
     "    'node_type': 'retrieval',\n",
     "    'search_space': [\n",
     "        {\n",
@@ -116,24 +116,24 @@
     "    'metric': 'scoring_roc_auc',\n",
     "    'node_type': 'scoring',\n",
     "    'search_space': [\n",
-    "        # {\n",
-    "        #     'k': [3],\n",
-    "        #     'module_type': 'knn',\n",
-    "        #     'weights': ['uniform', 'distance', 'closest']\n",
-    "        # },\n",
-    "        # {\n",
-    "        #     'module_type': 'linear'\n",
-    "        # },\n",
-    "        # {\n",
-    "        #     \"module_type\": \"mlknn\",\n",
-    "        #     \"k\": [5]\n",
-    "        # },\n",
     "        {\n",
-    "            \"module_type\": \"dnnc\",\n",
-    "            \"model_name\": [\"cross-encoder/ms-marco-MiniLM-L-6-v2\"],\n",
-    "            \"k\": [3],\n",
-    "            \"train_head\": [False, True]\n",
-    "        }\n",
+    "            'k': [3],\n",
+    "            'module_type': 'knn',\n",
+    "            'weights': ['uniform', 'distance', 'closest']\n",
+    "        },\n",
+    "        {\n",
+    "            'module_type': 'linear'\n",
+    "        },\n",
+    "        {\n",
+    "            \"module_type\": \"mlknn\",\n",
+    "            \"k\": [5]\n",
+    "        },\n",
+    "        # {\n",
+    "        #     \"module_type\": \"dnnc\",\n",
+    "        #     \"model_name\": [\"cross-encoder/ms-marco-MiniLM-L-6-v2\"],\n",
+    "        #     \"k\": [3],\n",
+    "        #     \"train_head\": [False, True]\n",
+    "        # }\n",
     "    ]\n",
     "}"
    ]
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,14 +176,24 @@
     "        {\n",
     "            'module_type': 'threshold',\n",
     "            'thresh': [0.5]\n",
-    "        }\n",
+    "        },\n",
+    "        {\n",
+    "            'module_type': 'tunable',\n",
+    "            'n_trials': [None, 3]\n",
+    "        },\n",
+    "        # {\n",
+    "        #     'module_type': 'argmax',\n",
+    "        # },\n",
+    "        # {\n",
+    "        #     'module_type': 'jinoos',\n",
+    "        # },\n",
     "    ]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,9 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2024-10-15 21:29:51,125] A new study created in memory with name: no-name-5b455f32-7e46-49b6-b481-1347fe2db2c0\n"
+     ]
+    }
+   ],
    "source": [
     "prediction_optimizer.fit(context)"
    ]
@@ -208,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -216,36 +234,57 @@
       "text/plain": [
        "{'metrics': {'regexp': [],\n",
        "  'retrieval': [1.0],\n",
-       "  'scoring': [1.0, 1.0, 1.0, 1.0],\n",
-       "  'prediction': [0.8333333333333334]},\n",
+       "  'scoring': [1.0, 1.0, 1.0, 1.0, 1.0],\n",
+       "  'prediction': [0.8333333333333334, 0.8888888888888888, 0.8888888888888888]},\n",
        " 'configs': {'regexp': [],\n",
        "  'retrieval': [{'module_type': 'vector_db',\n",
        "    'module_params': {'k': 10, 'model_name': 'deepvk/USER-bge-m3'},\n",
        "    'metric_name': 'retrieval_hit_rate_intersecting',\n",
-       "    'metric_value': 1.0}],\n",
+       "    'metric_value': 1.0,\n",
+       "    'module_dump_dir': 'modules_dumps_multilabel/retrieval/vector_db/comb_0'}],\n",
        "  'scoring': [{'module_type': 'knn',\n",
        "    'module_params': {'k': 3, 'weights': 'uniform'},\n",
        "    'metric_name': 'scoring_roc_auc',\n",
-       "    'metric_value': 1.0},\n",
+       "    'metric_value': 1.0,\n",
+       "    'module_dump_dir': 'modules_dumps_multilabel/scoring/knn/comb_0'},\n",
        "   {'module_type': 'knn',\n",
        "    'module_params': {'k': 3, 'weights': 'distance'},\n",
        "    'metric_name': 'scoring_roc_auc',\n",
-       "    'metric_value': 1.0},\n",
+       "    'metric_value': 1.0,\n",
+       "    'module_dump_dir': 'modules_dumps_multilabel/scoring/knn/comb_1'},\n",
        "   {'module_type': 'knn',\n",
        "    'module_params': {'k': 3, 'weights': 'closest'},\n",
        "    'metric_name': 'scoring_roc_auc',\n",
-       "    'metric_value': 1.0},\n",
+       "    'metric_value': 1.0,\n",
+       "    'module_dump_dir': 'modules_dumps_multilabel/scoring/knn/comb_2'},\n",
        "   {'module_type': 'linear',\n",
        "    'module_params': {},\n",
        "    'metric_name': 'scoring_roc_auc',\n",
-       "    'metric_value': 1.0}],\n",
+       "    'metric_value': 1.0,\n",
+       "    'module_dump_dir': 'modules_dumps_multilabel/scoring/linear/comb_0'},\n",
+       "   {'module_type': 'mlknn',\n",
+       "    'module_params': {'k': 5},\n",
+       "    'metric_name': 'scoring_roc_auc',\n",
+       "    'metric_value': 1.0,\n",
+       "    'module_dump_dir': 'modules_dumps_multilabel/scoring/mlknn/comb_0'}],\n",
        "  'prediction': [{'module_type': 'threshold',\n",
        "    'module_params': {'thresh': 0.5},\n",
        "    'metric_name': 'prediction_accuracy',\n",
-       "    'metric_value': 0.8333333333333334}]}}"
+       "    'metric_value': 0.8333333333333334,\n",
+       "    'module_dump_dir': 'modules_dumps_multilabel/prediction/threshold/comb_0'},\n",
+       "   {'module_type': 'tunable',\n",
+       "    'module_params': {'n_trials': None},\n",
+       "    'metric_name': 'prediction_accuracy',\n",
+       "    'metric_value': 0.8888888888888888,\n",
+       "    'module_dump_dir': 'modules_dumps_multilabel/prediction/tunable/comb_0'},\n",
+       "   {'module_type': 'tunable',\n",
+       "    'module_params': {'n_trials': 3},\n",
+       "    'metric_name': 'prediction_accuracy',\n",
+       "    'metric_value': 0.8888888888888888,\n",
+       "    'module_dump_dir': 'modules_dumps_multilabel/prediction/tunable/comb_1'}]}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +328,7 @@
       "\n",
       "==== vector_db ====\n",
       "\n",
-      "[2, 2, 2, 2, 1, 1, 1, 0, 1, 0] [np.float32(0.477605), np.float32(0.4929347), np.float32(0.49597514), np.float32(0.50022346), np.float32(0.553351), np.float32(0.55573064), np.float32(0.5758226), np.float32(0.60500944), np.float32(0.6174678), np.float32(0.67098904)] ['please set an alarm for mid day', 'set my alarm for getting up', 'make sure my alarm is set for three thirty in the morning', 'have an alarm set for three in the morning', 'i am nost sure why my account is blocked', 'i think my account is blocked but i do not know the reason', 'can you tell me why is my bank account frozen', 'is it possible to make a reservation at redrobin', 'why is there a hold on my american saving bank account', 'does redrobin take reservations']\n"
+      "[[0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 1, 0], [0, 1, 0], [1, 0, 0], [0, 1, 0], [0, 1, 0], [1, 0, 0]] [np.float32(0.477605), np.float32(0.49597514), np.float32(0.50022346), np.float32(0.5128485), np.float32(0.55573064), np.float32(0.5758226), np.float32(0.58933824), np.float32(0.6130637), np.float32(0.6174678), np.float32(0.63502705)] ['please set an alarm for mid day', 'make sure my alarm is set for three thirty in the morning', 'have an alarm set for three in the morning', 'wake me up at noon tomorrow', 'i think my account is blocked but i do not know the reason', 'can you tell me why is my bank account frozen', 'can i make a reservation for redrobin', 'why is there a hold on my capital one checking account', 'why is there a hold on my american saving bank account', 'are reservations taken at redrobin']\n"
      ]
     }
    ],
@@ -323,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -331,15 +370,30 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "==== dnnc ====\n",
+      "==== knn ====\n",
       "\n",
-      "[[  0.           0.         -10.27686977]\n",
-      " [  0.           0.         -10.98405933]]\n",
+      "[[0. 0. 1.]\n",
+      " [0. 0. 1.]]\n",
       "\n",
-      "==== dnnc ====\n",
+      "==== knn ====\n",
       "\n",
-      "[[0.         0.         0.18697797]\n",
-      " [0.         0.         0.07185777]]\n"
+      "[[0.         0.         1.        ]\n",
+      " [0.         0.         0.99999998]]\n",
+      "\n",
+      "==== knn ====\n",
+      "\n",
+      "[[0.         0.         0.7611975 ]\n",
+      " [0.         0.         0.73897344]]\n",
+      "\n",
+      "==== linear ====\n",
+      "\n",
+      "[[0.27486506 0.31681463 0.37459106]\n",
+      " [0.2769358  0.31536099 0.37366978]]\n",
+      "\n",
+      "==== mlknn ====\n",
+      "\n",
+      "[[0.08860759 0.1147541  0.79545455]\n",
+      " [0.08860759 0.1147541  0.79545455]]\n"
      ]
     }
    ],
@@ -369,34 +423,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==== threshold ====\n",
+      "\n",
+      "[[0 0 0]\n",
+      " [0 0 0]]\n",
+      "\n",
+      "==== tunable ====\n",
+      "\n",
+      "[[0 0 0]\n",
+      " [0 0 0]]\n",
+      "\n",
+      "==== tunable ====\n",
+      "\n",
+      "[[0 0 0]\n",
+      " [0 0 0]]\n"
+     ]
+    }
+   ],
    "source": [
-    "prediction_config = dict(\n",
-    "    node_type=\"prediction\",\n",
-    "    module_type=\"threshold\",\n",
-    "    module_config={\"thresh\": 0.5},\n",
-    "    load_path=\".\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction = InferenceNode(**prediction_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction.module.predict(context, ...)"
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "for trial in context.optimization_info.trials.prediction:\n",
+    "    print(f\"\\n==== {trial.module_type} ====\\n\")\n",
+    "    config = dict(\n",
+    "        node_type=\"prediction\",\n",
+    "        module_type=trial.module_type,\n",
+    "        module_config=trial.module_params,\n",
+    "        load_path=trial.module_dump_dir,\n",
+    "    )\n",
+    "    node = InferenceNode(**config)\n",
+    "    scores = node.module.predict(np.array([[0.27486506, 0.31681463, 0.37459106], [0.2769358,  0.31536099, 0.37366978]]))\n",
+    "    print(scores)\n",
+    "    node.module.clear_cache()\n",
+    "    gc.collect()\n",
+    "    torch.cuda.empty_cache()"
    ]
   }
  ],
