add cli inference

--- a/experiments/hydra-configs/inference-pipeline.ipynb
+++ b/experiments/hydra-configs/inference-pipeline.ipynb
@@ -1,29 +1,98 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import yaml\n",
-    "\n",
-    "path = \"/home/voorhs/repos/AutoIntent/autointent/datafiles/inference-config-example.yaml\"\n",
-    "with open(path) as file:\n",
-    "    inference_dict_config = yaml.safe_load(file)"
+    "## make data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hydra.utils import instantiate\n",
-    "from autointent.configs.inference_pipeline import InferencePipelineConfig\n",
+    "import json\n",
+    "from pathlib import Path\n",
     "\n",
+    "with Path(\"/home/voorhs/repos/AutoIntent/data/multi_label_data/dstc3-5shot.json\").open() as file:\n",
+    "    dstc = json.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'utterance': 'yes', 'labels': [1]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dstc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utterances = [rec[\"utterance\"] for rec in dstc]\n",
+    "labels = [rec[\"labels\"] for rec in dstc]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with Path(\"data/utterances.json\").open(\"w\") as file:\n",
+    "    json.dump(utterances, file, indent=4, ensure_ascii=False)\n",
     "\n",
-    "pipeline_config = instantiate(InferencePipelineConfig, **inference_dict_config)"
+    "with Path(\"data/labels.json\").open(\"w\") as file:\n",
+    "    json.dump(labels, file, indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## optimize pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! poetry run autointent multilabel_path=default mode=multilabel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## test pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! poetry run autointent-inference data_path=\"/home/voorhs/repos/AutoIntent/experiments/hydra-configs/data/utterances.json\" source_dir=\"/home/voorhs/repos/AutoIntent/wild_swan_10-16-2024_11-36-04\" output_path=\"predictions.json\""
    ]
   }
  ],
